More spacing fixes
I should stop trying to debug this from my GitHub Pages site. Also, I hope no one ever looks at these.

--- a/assignment3/css/styles.css
+++ b/assignment3/css/styles.css
@@ -1,4 +1,5 @@
 section {
   background-color: lightgoldenrodyellow;
-  padding: 15px;
+  padding: 5px 20px;
+  margin: 10px;
 }
